# omnik_inverter

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh  inverter.cpp  inverter.hpp  main.cpp  tidy.sh
